--- a/web/index.html
+++ b/web/index.html
@@ -1,9 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="bg-white dark:bg-gray-900">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/webp" href="/favicon.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+			href="https://fonts.googleapis.com/css2?family=Rosario:ital,wght@0,300..700;1,300..700&family=Saira+Condensed:wght@100;200;300;400;500;600;700;800;900&family=Trirong:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&display=swap"
+			rel="stylesheet"
+		/>
     <title>Dialca UI</title>
   </head>
   <body>
