feat: add meta tags for improved SEO and social sharing

--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/webp" href="/favicon.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Dialca UI - Modern React component library with TypeScript support. Complete documentation, examples, and customization guides." />
+    <meta name="keywords" content="React, TypeScript, UI library, components, documentation, examples, customization, Frontend, Web Development" />
+    <meta name="author" content="Dialcadev" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Dialca UI - React Component Library" />
+    <meta property="og:description" content="Dialca UI - Modern React component library with TypeScript support. Complete documentation, examples, and customization guides." />
+    <meta property="og:site_name" content="Dialca UI" />
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Dialca UI - React Component Library" />
+    <meta name="twitter:description" content="Dialca UI - Modern React component library with TypeScript support. Complete documentation, examples, and customization guides." />
     <link
 			href="https://fonts.googleapis.com/css2?family=Rosario:ital,wght@0,300..700;1,300..700&family=Saira+Condensed:wght@100;200;300;400;500;600;700;800;900&family=Trirong:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&display=swap"
 			rel="stylesheet"
